# cplusplus11

./: .gitignore  README.md
advancedMetadataMockUp/: Makefile.am  compilation.txt  configure.ac  examplewindow.cpp  examplewindow.h
advancedMetadataMockUp/src/: examplewindow.cpp  examplewindow.h
compilerTest/: compilation  main.cpp
gtkmmSetFocusChain/: SOURCE.TXT  compilation.txt  examplewindow.cpp  examplewindow.h  gtkmmSetFocusExampleFromWeb.cpp  temp.txt
nestedCommentTest/: main.cpp
