AC_INIT([ExampleWindow C++], [0.5], [bug-report@hello.example.com],
            [examplewindow.cpp], [http://hello.example.com/])
AC_PREREQ([2.59])
AM_INIT_AUTOMAKE([1.10 -Wall no-define])
PKG_CHECK_MODULES([GTKMM], [gtkmm-2.4])
AC_CONFIG_HEADERS([config.h])
LT_INIT
AC_PROG_CXX
AC_CONFIG_FILES([Makefile])
AC_OUTPUT
